# motor_control

./: package.xml
include/: motor_control_cpp.h
launch/: motor_control_launch.py
scripts/: init_pcan.sh  set_motor_can_id.py
src/: motor_control_cpp.cpp  motor_hardware_interface.cpp
